[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/charselect.gd" type="Script" id=1]
[ext_resource path="res://graphics/bg_charselect.png" type="Texture" id=2]
[ext_resource path="res://graphics/transition.png" type="Texture" id=3]
[ext_resource path="res://resources/fnt_score.tres" type="DynamicFont" id=4]
[ext_resource path="res://scenes/portrait.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/preview_char.tscn" type="PackedScene" id=6]

[node name="charselect" type="Node2D" index="0"]

script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Camera2D" type="Camera2D" parent="." index="0"]

anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 0.25, 0.25 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = false
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false
__meta__ = {
"_edit_lock_": true
}

[node name="bg" type="Sprite" parent="." index="1"]

z_index = -4000
texture = ExtResource( 2 )
_sections_unfolded = [ "Z Index" ]
__meta__ = {
"_edit_lock_": true
}

[node name="transition" type="Sprite" parent="." index="2"]

visible = false
z_index = 4000
texture = ExtResource( 3 )
_sections_unfolded = [ "Z Index" ]
__meta__ = {
"_edit_lock_": true
}

[node name="label_select" type="Label" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -90.0
margin_top = -69.0
margin_right = 90.0
margin_bottom = -55.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 4 )
text = "SELECT YOUR CHARACTER"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_fonts" ]
__meta__ = {
"_edit_lock_": true
}

[node name="portraits" type="Node2D" parent="." index="4"]

_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_lock_": true
}

[node name="portrait_goto" parent="portraits" index="0" instance=ExtResource( 5 )]

position = Vector2( -18, 0 )

[node name="portrait_darkgoto" parent="portraits" index="1" instance=ExtResource( 5 )]

position = Vector2( 18, 0 )
character = "darkgoto"
option_num = 2

[node name="preview_player1" parent="." index="5" instance=ExtResource( 6 )]

position = Vector2( -83, 0 )
_sections_unfolded = [ "Animation", "Transform" ]

[node name="preview_player2" parent="." index="6" instance=ExtResource( 6 )]

position = Vector2( 83, 0 )
_sections_unfolded = [ "Animation", "Transform" ]
player_num = 2

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="." index="7"]

stream = null
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1


